--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Getting Started Example",
+    "name": "Tracker",
     "description": "Build an Extension!",
     "version": "1.0",
     "manifest_version": 3
